tests/broken/for-unclosed.stderr
error: This statement is never closed.
 --> tests/broken/for-unclosed.rs:4:26
  |
4 | #[oxiplate_inline = "{%- for number in numbers -%}{{ number }} + 1 = {{ number + 1 }}"]
  |                          ^^^
